kustomize/blue-green/overlays/prod/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /prod/preview
      - /prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeinfo-bg
  annotations:
      traefik.ingress.kubernetes.io/router.middlewares: kubeinfo-prod-strip-prefix-prod@kubernetescrd
spec:
  rules:
    - host: mjlab.servehttp.com
      http:
        paths:
          - path: /prod/kubeinfo
            pathType: Prefix
            backend:
              service:
                name: kubeinfo-bg
                port:
                  number: 80
          - path: /prod/preview/kubeinfo
            pathType: Prefix
            backend:
              service:
                name: kubeinfo-bg-preview
                port:
                  number: 80
